--- a/index.html
+++ b/index.html
@@ -367,15 +367,42 @@
                             </table>
                         </div>                        
                     </div>
-
-                    <!--                   
+                    
+                    <hr>
 
                     <div class="mb-0">
                         <div class="d-flex align-items-center mb-2">
-                            <p class="font-family-size-medium-large m-0">Token Market Info</p>
+                            <p class="font-family-size-medium m-0">Token Market Info</p>
                             <button type="button" class="refreshTokenMarket btn-sm btn-danger ms-3 rounded-pill font-family-size-small">Refresh</button>
                         </div>
                         <div class="tb-div-four font-family-size-small-medium text-info">
+                            <table class="my-table-hive">
+                                <tr>
+                                    <td>
+                                        <p class="mb-0">
+                                            <span class="details">
+                                                <a href="https://hive-engine.com/trade/VAULT" target="_blank" class="price-info">VAULT <img id="logo-token" src="assets/icons/vault-72x72.png"> Market Price</a>
+                                            </span>
+                                        </p>  
+                                    </td>
+                                    <td>                                    
+                                        <p class="mb-0"><span id="vaultusdprice">$0</span></p>          
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <p class="mb-0">
+                                            <span class="details">
+                                                <a href="https://hive-engine.com/trade/UPME" target="_blank" class="price-info">UPME <img id="logo-token" src="assets/icons/upme-72x72.png"> Market Price</a>
+                                            </span>
+                                        </p>  
+                                    </td>
+                                    <td>                                    
+                                        <p class="mb-0"><span id="upmeusdprice">$0</span></p>          
+                                    </td>
+                                </tr>
+                            </table>
+                            <!--
                             <table class="my-table-token">
                                 <tr class="">
                                     <td class="tb-token-td">
@@ -393,7 +420,8 @@
                                 <tr class="">
                                     <td class="tb-token-td">
                                         <p class="mb-0">
-                                            <span class="details"><a href="https://hive-engine.com/trade/UPME" target="_blank" class="price-info">UPME <img id="logo-token" src="assets/icons/upme-72x72.png"> Market Price</a>
+                                            <span class="details">
+                                                <a href="https://hive-engine.com/trade/UPME" target="_blank" class="price-info">UPME <img id="logo-token" src="assets/icons/upme-72x72.png"> Market Price</a>
                                             </span>
                                         </p>  
                                     </td>
@@ -401,7 +429,7 @@
                                         <p class="mb-0"><span id="upmeusdprice">$0</span></p>          
                                     </td>
                                     <td></td>
-                                </tr>
+                                </tr>                                
                                 <tr class="">
                                     <td class="tb-token-td">
                                         <p class="mb-0">
@@ -426,11 +454,11 @@
                                         <p class="mb-0"><span id="heliosusdprice">$0</span></p>          
                                     </td>
                                     <td></td>
-                                </tr>
+                                </tr>                                
                             </table>
+                            -->
                         </div>                        
-                    </div>
-                    -->                    
+                    </div>                                    
                 </div>
             </div>
         </div>
