--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
             </div>
         </div>
 
+        <div class="top-link-button">
+            <a href="https://hbd.uswap.app" target="_blank">Go to HBD Swap</a>
+        </div>
+
         <div class="mbody mt-0 d-flex justify-content-center">
             <div class="d-flex flex-column rounded-3 bg p-0 m-3 mt-0 card column-one-scale">
                 <div class="m-3">
