--- a/index.html
+++ b/index.html
@@ -250,6 +250,15 @@
                         </div>
                     </div>
 
+                    <div class="d-flex mt-2 mb-2">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="noMemoCheck">
+                            <label class="form-check-label font-family-size-small-medium" for="noMemoCheck">
+                                No Minimum (Accept any amount)
+                            </label>
+                        </div>
+                    </div>
+
                     <div class="d-flex receive-group">
                         <p class="mt-0 mb-0 font-family-size-medium">Minimum To Receive: <span id="slipageqty" class="text-info-two font-family-size-medium">0.000</span>&nbsp;<span id="minreceivesymbol" class="text-info font-family-size-medium">SWAP.HIVE</span></p>
                     </div>
